--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Stanning Jennie Kim &lt;3</h1>
     <p>
       <small>This web page is created by</small>
-      <a href="https://twitter.com/earvinpiamonte">@earvinpiamonte</a>.
+      <a href="https://earvinpiamonte.com">@earvinpiamonte</a>.
     </p>
   </body>
 </html>
