--- a/index.html
+++ b/index.html
@@ -3,13 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&amp;family=Krona+One&amp;display=swap"
+    />
     <title>Stan domain for Jennie Kim by @earvinpiamonte</title>
+
+    <style>
+      * {
+        padding: 0px;
+        margin: 0px;
+      }
+      html {
+        height: 100vh;
+      }
+
+      body {
+        font-family: "Josefin Sans", sans-serif;
+        height: 100vh;
+      }
+
+      section {
+        height: 100vh;
+        display: grid;
+        place-items: center;
+      }
+
+      h1 {
+        font-size: 4rem;
+        margin-bottom: 1rem;
+      }
+
+      .text-center {
+        text-align: center;
+      }
+    </style>
   </head>
-  <body>
-    <h1>Stanning Jennie Kim &lt;3</h1>
-    <p>
-      <small>This web page is created by</small>
-      <a href="https://earvinpiamonte.com">@earvinpiamonte</a>.
-    </p>
+  <body style="text-align: center">
+    <section class="text-center text-white">
+      <div>
+        <h1 class="text-mirrored-below">Stanning Jennie Kim &lt;3</h1>
+        <p>
+          Website created by
+          <a
+            href="https://earvinpiamonte.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            >@earvinpiamonte</a
+          >
+          :&rpar;
+        </p>
+      </div>
+    </section>
   </body>
 </html>
