--- a/index.html
+++ b/index.html
@@ -37,21 +37,33 @@
       .text-center {
         text-align: center;
       }
+      .mb-3 {
+        margin-bottom: 3rem;
+      }
     </style>
   </head>
   <body style="text-align: center">
     <section class="text-center text-white">
       <div>
-        <h1 class="text-mirrored-below">Stanning Jennie Kim &lt;3</h1>
-        <p>
-          Website created by
+        <h1 class="mb-3">
           <a
-            href="https://earvinpiamonte.com"
+            href="https://twitter.com/search?q=%23JENNIELANGMALAKAS"
             target="_blank"
             rel="noopener noreferrer"
-            >@earvinpiamonte</a
+            >#JENNIELANGMALAKAS</a
           >
-          :&rpar;
+        </h1>
+        <p>
+          <small>
+            Domain and site by
+            <a
+              href="https://earvinpiamonte.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              >@earvinpiamonte</a
+            >
+            :&rpar;
+          </small>
         </p>
       </div>
     </section>
