--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     />
     <title>Stan domain for Jennie Kim by @earvinpiamonte</title>
 
+    <!--
+      Developed and maintained by Noel Earvin Piamonte
+      Website: https://earvinpiamonte.com/
+      Twitter: https://twitter.com/earvinpiamonte/
+      Date updated: October 28, 2020
+    -->
+
     <style>
       * {
         padding: 0px;
         margin: 0px;
       }
+
       html {
         height: 100vh;
       }
@@ -37,12 +45,17 @@
       .text-center {
         text-align: center;
       }
+
+      .text-break-all {
+        word-break: break-all;
+      }
+
       .mb-3 {
         margin-bottom: 3rem;
       }
     </style>
   </head>
-  <body style="text-align: center">
+  <body class="text-center">
     <section class="text-center text-white">
       <div>
         <h1 class="mb-3">
@@ -50,6 +63,7 @@
             href="https://twitter.com/search?q=%23JENNIELANGMALAKAS"
             target="_blank"
             rel="noopener noreferrer"
+            class="text-break-all"
             >#JENNIELANGMALAKAS</a
           >
         </h1>
