Update main link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div>
         <h1 class="mb-3">
           <a
-            href="https://twitter.com/search?q=%23JENNIELANGMALAKAS"
+            href="https://www.instagram.com/p/CEJKELDjt26"
             target="_blank"
             rel="noopener noreferrer"
             class="text-break-all"
